# advanced-rust-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  lab.md
.devcontainer/: devcontainer.json
examples/1-subcommands/src/: main.rs
examples/2-complex/: Cargo.toml
examples/2-complex/src/: main.rs
examples/3-envvars/src/: lib.rs  main.rs
examples/4-package/: README.md
examples/5-basic-logging/: Cargo.toml
examples/5-basic-logging/src/: lib.rs  main.rs
examples/7-errors/: Cargo.toml
examples/7-errors/src/: lib.rs  main.rs
examples/no-modules/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
resources/: containerizing.md  packaging.md  releasing.md
