[package]
name = "blkrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple CLI tool to read and write blocks of data from a file or device."
documentation = "docs.rs/blkrs"
repository = "https://github.com/alfredodeza/advanced-rust-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2", features = ["derive", "env"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

